<resources>
    <string name="app_name">ChronoVision</string>
    <string name="about_app">ChronoVision\nVersion 1.0\nToshkaraf@\nrafes@ukr.net</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_event">Add Event</string>


    <string name="title_activity_main_settings">MainSettings</string>


    <!-- InitialActivity -->
    <string-array name="initial_choice">
        <item>Open</item>
        <item>Create</item>
    </string-array>

    <string-array name="initial_choice_summary">
        <item>Open existing time map</item>
        <item>Create new time map</item>
    </string-array>


    <!--AddEventActivity-->
    <string name="add_main_features">MAIN FEATURES</string>
    <string name="add_multimedia">MULTIMEDIA</string>
    <string name="add_tags">TAGS</string>


    <string-array name="themes_list">
        <item>Warm</item>
        <item>Cold</item>
        <item>Dark</item>
    </string-array>

    <string-array name="language_list">
        <item>English</item>
        <item>Russian</item>

    </string-array>

    <string name="app_themes">App theme</string>
    <string name="app_languages">Interface language</string>


    <!-- InitialActivity -->

    <string name="create_map">Create new time map</string>
    <string name="open_map">Open existing time map</string>


    <!-- CreateNewMapActivity -->

    <string name="map_name">Name:</string>
    <string name="map_tags">Tags:</string>
    <string name="my_time_map">New time map</string>
    <string name="foreign_policy">foreign policy</string>
    <string name="domestic_policy">domestic policy</string>
    <string name="war">war</string>
    <string name="culture">culture</string>
    <string name="religion">religion</string>
    <string name="economy">economy</string>
    <string name="science">science</string>
    <string name="create_time_map">Create time map</string>
    <string name="other">other</string>
    <string name="custom_tag">custom tag</string>
    <string name="toast_invalide_name">The field "Name" could not be empty</string>


    <string-array name="tags_spinner">
        <item>foreign policy</item>
        <item>domestic policy</item>
        <item>war</item>
        <item>culture</item>
        <item>religion</item>
        <item>economy</item>
        <item>science</item>
    </string-array>


    <!-- DatePickerFragment -->
    <string name="please_select_a_date">Please, select a date</string>
    <string name="BC">BC</string>
    <string name="initial_date">From date:</string>
    <string name="finale_date">To date:</string>
    <string name="add_event_title">ADD INFORMATION ABOUT EVENT</string>
    <string name="name">Name:</string>
    <string name="event_name">your event name</string>
    <string name="description">Full description:</string>
    <string name="month_field">Mоnth</string>
    <string name="day_field">Day of the month</string>

    <string-array name="months">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
