<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="ua.toshkaraf.chronovision.CreateNewMapActivity">


            <TextView
                android:id="@+id/map_name"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/map_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/map_tags"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="16dp"
                android:layout_row="1"
                android:text="@string/map_tags"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="@dimen/abc_dropdownitem_text_padding_right"
                android:layout_row="0"
                android:hint="@string/my_time_map" />

            <Space
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:src="@android:drawable/ic_menu_info_details" />

            <CheckBox
                android:id="@+id/checkBox1"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="2"
                android:checked="false"
                android:text="@string/foreign_policy" />

            <CheckBox
                android:id="@+id/checkBox2"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="3"
                android:checked="false"
                android:text="@string/domestic_policy" />

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="4"
                android:checked="false"
                android:text="@string/culture" />

            <CheckBox
                android:id="@+id/checkBox4"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="5"
                android:checked="false"
                android:text="@string/religion" />

            <CheckBox
                android:id="@+id/checkBox5"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="6"
                android:checked="false"
                android:text="@string/economy" />

            <CheckBox
                android:id="@+id/checkBox6"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="7"
                android:checked="false"
                android:text="@string/science" />

            <CheckBox
                android:id="@+id/checkBox7"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="left|center_horizontal"
                android:layout_row="8"
                android:checked="false"
                android:text="@string/war" />

            <Button
                android:id="@+id/create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="16"
                android:text="@string/create_time_map" />

        </GridLayout>
    </ScrollView>

</FrameLayout>
