<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/abc_action_bar_icon_vertical_padding_material"
    android:paddingLeft="@dimen/abc_action_bar_icon_vertical_padding_material"
    android:paddingRight="@dimen/abc_action_bar_icon_vertical_padding_material">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/add_event_title"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/abc_action_bar_overflow_padding_start_material"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:layout_margin="@dimen/abc_action_bar_overflow_padding_start_material"
        android:layout_gravity="left|center_vertical"
        android:id="@+id/name"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:layout_gravity="center_horizontal"
        android:hint="@string/event_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/initial_date"
        android:layout_margin="@dimen/abc_action_bar_overflow_padding_start_material"
        android:layout_gravity="left|center_vertical"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/pick_initial_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/finale_date"
        android:layout_margin="@dimen/abc_action_bar_overflow_padding_start_material"
        android:layout_gravity="left|center_vertical"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/pick_final_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="@dimen/abc_action_bar_overflow_padding_start_material"
        android:layout_gravity="left|center_vertical"
        android:id="@+id/event_description"
        android:text="@string/description"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText" />

</LinearLayout>
